Added Redis db to track deleted products. Updated shopping cart functionality. Added checksum to products to check if modified.
