# Product microservice/models/product.model.ts
@@ -6,6 +6,7 @@ export interface ProductDocument extends Document {
   price: number;
   image: string;
   author: string;
+  checksum: string;
 }
 
 const ProductSchema: Schema = new Schema(
@@ -15,8 +16,9 @@ const ProductSchema: Schema = new Schema(
     price: { type: Number, required: true },
     image: { type: String, required: true },
     author: { type: String, required: false },
+    checksum: { type: String, required: false, default: '' },
   },
-  { timestamps: true }
+  { timestamps: false, versionKey: false }
 );
 
 ProductSchema.pre('save', async function (next) {
