# Product microservice/public/swagger.json
@@ -44,6 +44,9 @@
 					},
 					"author": {
 						"type": "string"
+					},
+					"checksum": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -51,7 +54,8 @@
 					"name",
 					"price",
 					"image",
-					"author"
+					"author",
+					"checksum"
 				],
 				"type": "object"
 			},
